--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="container">
               <div class="row welcome-section">
                 <div id="inside" style="margin-top: 400px;" class="col-md-12 text-center text-center">
-                  <h1 style="font-weight: 600;">CowIsSad</h1>
-                  <h2>AKA - Ben Thompson</h2>
-                  <h4>Computing student that loves Web Development and learning new lanuages and frameworks :)</h4>
-                  <div>
+                  <h1 data-aos="fade-up" data-aos-duration="400" style="font-weight: 600;">CowIsSad</h1>
+                  <h2 data-aos="fade-up" data-aos-duration="800">AKA - Ben Thompson</h2>
+                  <h4 data-aos="fade-up" data-aos-duration="800">Computing student that loves Web Development and learning new lanuages and frameworks :)</h4>
+                  <div data-aos="fade-up" data-aos-duration="1400">
                     <a class="p-2 top-icons" href="https://github.com/CowIsSad"><i class="fab fa-github"></i></a>
                     <a class="p-2 top-icons" href="mailto:cowissad@gamil.com"><i class="fa fa-envelope"></i></a>
                     <a class="p-2 top-icons" href="https://twitter.com/CowIsSad"><i class="fab fa-twitter"></i></a>
