--- a/too-early.html
+++ b/too-early.html
@@ -23,8 +23,8 @@
     <main>
         <div class="container p-5">
             <div class="text-center too-early">
-                <h2>What are you doing here??</h2>
-                <h3 style="padding-bottom: 30px;">I said soon, your too early. Any way now go back.</h3>
+                <h2 data-aos="fade-down" data-aos-duration="1200">What are you doing here??</h2>
+                <h3 data-aos="fade-down" data-aos-duration="700" style="padding-bottom: 30px;">I said soon, your too early. Any way now go back.</h3>
                 <a class="homepage-button border border-black" href="index.html">Go back to Home page</a>
             </div>
         </div>
