--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <h4 data-aos="fade-up" data-aos-duration="800">Computing student that loves Web Development and learning new lanuages and frameworks :)</h4>
                   <div data-aos="fade-up" data-aos-duration="1400">
                     <a class="p-2 top-icons" href="https://github.com/CowIsSad"><i class="fab fa-github"></i></a>
-                    <a class="p-2 top-icons" href="mailto:cowissad@gamil.com"><i class="fa fa-envelope"></i></a>
+                    <a class="p-2 top-icons" href="mailto:cowissad@gmail.com"><i class="fa fa-envelope"></i></a>
                     <a class="p-2 top-icons" href="https://twitter.com/CowIsSad"><i class="fab fa-twitter"></i></a>
                     <a class="p-2 top-icons" href="https://www.linkedin.com/in/ben-thompson-the-first/"><i class="fab fa-linkedin"></i></a>
                 </div>
@@ -65,19 +65,7 @@
                 <h4 class="pb-3">My Projects</h4>
             </div>
             <div class="row">
-                <div data-aos="fade-up-right" data-aos-duration="800" class="col-md-6 mb-5">
-                    <div class="border border-dark p-3 project">
-                        <a href="https://lakewebdesign.co.uk/">
-                            <h5>Lake Web Design</h5>
-                            <br>
-                            <p>Lake Web Design is a small buisness that I run mostly for fun as what we can do is provide local buisness with a brand new website with SEO otimization and bring new customers to there buisness. 
-                            <br>
-                            <br>
-                            Project start date: June 2020</p>
-                        </a>
-                    </div>
-                </div>
-                <div data-aos="fade-up-left" data-aos-duration="800" class="col-md-6 mb-5">
+                <div data-aos="fade-up-left" data-aos-duration="800" class="col-md-12 mb-5">
                     <div class="border border-dark p-3 project">
                         <a href="too-early.html">
                             <h5>More to come...</h5>
@@ -96,7 +84,7 @@
                 <p>&copyCowissad 2021</p>
                 <div>
                     <a class="p-1 footer-icons" href="https://github.com/CowIsSad"><i class="fab fa-github"></i></a>
-                    <a class="p-1 footer-icons" href="mailto:cowissad@gamil.com"><i class="fa fa-envelope"></i></a>
+                    <a class="p-1 footer-icons" href="mailto:cowissad@gmail.com"><i class="fa fa-envelope"></i></a>
                     <a class="p-1 footer-icons" href="https://twitter.com/CowIsSad"><i class="fab fa-twitter"></i></a>
                     <a class="p-1 footer-icons" href="https://www.linkedin.com/in/ben-thompson-the-first/"><i class="fab fa-linkedin"></i></a>
                 </div>
