--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div>
-                        <p>Hi, im Ben and I am a student currently studding Computing at collage. My main languages I know are <i class="fab fa-html5"></i> HTML 5, <i style="padding-right: 5px;" class="fab fa-css3-alt"></i>CSS 3 and <i style="padding-right: 3px;" class="fab fa-php"></i>PHP.</p>
+                        <p>Hi, im Ben and I am a student currently studying Computing at college. My main languages I know are <i class="fab fa-html5"></i> HTML 5, <i style="padding-right: 5px;" class="fab fa-css3-alt"></i>CSS 3 and <i style="padding-right: 3px;" class="fab fa-php"></i>PHP.</p>
                         <p>I am currently learning <i style="padding-right: 5px;" class="fab fa-python"></i>Python, <i style="padding-right: 5px;" class="fab fa-js"></i>Java Script and more <i style="padding-right: 5px;" class="fab fa-css3-alt"></i>PHP and some very cool frameworks such as <i style="padding-right: 5px;" class="fab fa-laravel"></i>Laravel</p>
                     </div>
 
